<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:fontFamily="@font/mulish"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:background="null"
        android:drawableLeft="@drawable/ic_ava_placeholder"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawableRight="@drawable/ic_arrow_right_24"
        android:textAlignment="textStart"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_appereance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_account"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:background="null"
        android:drawableLeft="@drawable/ic_baseline_wb_sunny_24"
        android:text="@string/appereance"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawableRight="@drawable/ic_arrow_right_24"
        android:textAlignment="textStart"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_appereance"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="null"
        android:drawableLeft="@drawable/ic_baseline_notifications_none_24"
        android:text="@string/notification"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawableRight="@drawable/ic_arrow_right_24"
        android:textAlignment="textStart"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_notification"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="null"
        android:drawableLeft="@drawable/ic_baseline_help_outline_24"
        android:text="@string/help"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawableRight="@drawable/ic_arrow_right_24"
        android:textAlignment="textStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>