<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <ImageView
        android:id="@+id/ava"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="150dp"
        android:padding="20dp"
        android:src="@drawable/ic_ava_placeholder"
        android:background="@drawable/circle_gray"
        android:contentDescription="@string/profile_image" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/ava"
        app:layout_constraintRight_toRightOf="@id/ava"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/ava"
        app:layout_constraintBottom_toTopOf="@id/save_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:background="@drawable/circle_gray"
                android:hint="@string/first_name_required"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_gray"
                android:hint="@string/last_name_optional"/>
        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input"
        android:text="@string/save"
        android:textColor="@color/white"
        android:fontFamily="@font/mulish"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/round_corner_blue"/>


</androidx.constraintlayout.widget.ConstraintLayout>