<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="80dp"
        android:id="@+id/wel_img1"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_baseline_message_24"/>

    <ImageView
        android:id="@+id/wel_img2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/wel_img1"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleX="-1"
        android:src="@drawable/ic_baseline_message_24"/>

    <TextView
        android:id="@+id/wel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome_title"
        android:textStyle="bold"
        android:textSize="24sp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/mulish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wel_img2" />

    <TextView
        android:id="@+id/term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/wel_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/tns"
        android:textAlignment="center"
        android:clickable="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/term"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start_messaging"
        android:textColor="@color/white"
        android:fontFamily="@font/mulish"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/round_corner_blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>